# platformutes

./: .gitignore  CMakeLists.txt  README.md  platformutes.desktop  setup.iss
CMakeModules/: README
data/levels/: lab.pmlvl  pyramid.pmlvl  test.pmlvl
data/levels/desert/: lvl1.pmlvl
data/levels/lab/: lvl1.pmlvl  lvl2.pmlvl
data/levels/pyramid/: desert_test.pmlvl  lvl1.pmlvl  lvl10.pmlvl  lvl2.pmlvl  lvl3.pmlvl  lvl4.pmlvl  lvl5.pmlvl  lvl6.pmlvl  lvl7.pmlvl  lvl8.pmlvl  lvl9.pmlvl
data/tilesets/: lab.pmts  pyramid.pmts
data/tilesets/desert/: tileset
data/tilesets/lab/: tileset
data/tilesets/pyramid/: tileset
data_src/: alien.xcf  blockside.xcf  character.xcf  mummy.xcf  steel.xcf
src/: Badguy.cpp  Badguy.h  Badguys.cpp  Badguys.h  Config.cpp  Config.h  Environment.cpp  Environment.h  Font.cpp  Font.h  Image.cpp  Image.h  Level.cpp  Level.h  Menu.cpp  Menu.h  Player.cpp  Player.h  ResourceMgr.cpp  ResourceMgr.h  Script.cpp  Script.h  Sound.cpp  Sound.h  Sprite.cpp  Sprite.h  Tile.cpp  Tile.h  Tileset.cpp  Tileset.h  Video.cpp  Video.h  editor.cpp  editor.h  error.xpm  game.cpp  game.h  main.cpp  tools.cpp  tools.h
